feat: Add a time history get from home assistant
